...

            <Button
                android:id="@+id/admin_to_main_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/admin_to_priceCrud_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/admin_unlock_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/admin_unlock_ID_searchField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/admin_unlockAccount_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

            <Button
                android:id="@+id/admin_activate_deactivate_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
...
            <LinearLayout
        android:layout_width="250dp"
        android:id = "@+id/admin_activate_deactivate_container"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
...

            <EditText
                android:id="@+id/admin_activate_deactivate_search_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/admin_activate_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
...

            <Button
                android:id="@+id/admin_deactivate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
        android:id="@+id/admin_promote_demote_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
...
            <LinearLayout
                android:layout_width="250dp"
                android:id = "@+id/admin_promote_demote_container"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
...

            <EditText
                android:id="@+id/admin_promote_demote_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

                    <Button
                android:id="@+id/admin_promote_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
...

                    <Button
                android:id="@+id/admin_demote_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/admin_create_notif_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/admin_notif_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/admin_notif_message_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/admin_send_notif_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <Button
        android:id="@+id/admin_showAllAccounts_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
...
                            android:padding="16dp">
                            <TextView
                                android:id="@+id/admin_account_cardDetail_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
