...
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/main_toPortfolio_image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/business_center_24px" />

...
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/main_toSearch_image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:paddingHorizontal="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/search_24px" />

...
